# foxboard

./: .gitignore  README.md
backend/: Cargo.toml  TODO.md
backend/migrations/: 20240915133354_initial_setup.down.sql  20240915133354_initial_setup.up.sql  20241107100034_resource_permissions.down.sql  20241107100034_resource_permissions.up.sql  20241107181511_subtasks.down.sql  20241107181511_subtasks.up.sql
backend/src/: config.rs  error.rs  main.rs  util.rs
backend/src/data/: mod.rs  models.rs  project_data.rs  task_data.rs  user_data.rs
backend/src/handler/: mod.rs  project_handler.rs  user_handler.rs
backend/src/messages/: general_messages.rs  messages.sync-conflict-20241103-155009-Y35B6X2.rs  mod.rs  project_messages.rs  task_massages.rs  user_messages.rs
backend/src/routes/: mod.rs  project_routes.rs  task_routes.rs  user_routes.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.tsx  models.tsx
frontend/src/Components/: Projects.tsx
